--- a/src/index.html
+++ b/src/index.html
@@ -53,18 +53,18 @@
               <form action="#" class="add-form">
                 <p class="subtitle is-3">Добавить величину</p>
                 <div class="field">
-                  <label class="label">Значение эквивалентное 1 метру:</label>
+                  <label class="label" for="input1">Значение эквивалентное 1 метру:</label>
 
                   <div class="control">
-                    <input class="input add-form-value" type="text" placeholder="100" required>
+                    <input id="input1" class="input add-form-value" type="text" placeholder="100" required>
                   </div>
                 </div>
 
                 <div class="field">
-                  <label class="label">Единицы измерения в формате:</label>
+                  <label class="label" for="input2">Единицы измерения в формате:</label>
 
                   <div class="control">
-                    <input class="input add-form-unit" type="text" placeholder="метр, m" required>
+                    <input id="input2" class="input add-form-unit" type="text" placeholder="метр, m" required>
                   </div>
                 </div>
 
