--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.scss">
-    <script defer type="module" src="index.js"></script>
+    <script defer src="index.js"></script>
     <title>FE Template</title>
   </head>
   <body>
